# Proyecto2-GraficaPorComputadoras

./: .gitignore  CMakeLists.txt  README.md  run.sh
assets/: map.txt
src/: imageloader.h  main.cpp  raycaster.h
